gitops/argocd/argo-cd/templates/webhook-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-webhook
spec:
  ingressClassName: traefik
  rules:
  - host: argocd.dixneuf19.fr
    http:
      paths:
      - backend:
          service:
            name: argo-cd-argocd-server
            port:
              number: 80
        path: /api/webhook
        pathType: Exact
  tls:
  - hosts:
    - argocd.dixneuf19.fr
    secretName: argocd-server-tls # use the one from the main ingress
